# pydantic-settings-azure-app-configuration

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  linter_and_formatter.py  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yaml  dependabot.yaml
.github/workflows/: pull_request.yaml
src/pydantic_settings_azure_app_configuration/: source.py
tests/unit/: test_source.py
